@@ -17,45 +17,63 @@
 
 package org.openqa.selenium.remote.internal;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.openqa.selenium.json.Json.MAP_TYPE;
-import static org.openqa.selenium.remote.http.HttpMethod.GET;
-
 import com.google.common.collect.HashMultimap;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Multimap;
 
+import org.junit.AfterClass;
+import org.junit.BeforeClass;
 import org.junit.Test;
 import org.openqa.selenium.BuildInfo;
 import org.openqa.selenium.Platform;
+import org.openqa.selenium.TimeoutException;
+import org.openqa.selenium.environment.webserver.AppServer;
+import org.openqa.selenium.environment.webserver.NettyAppServer;
 import org.openqa.selenium.json.Json;
-import org.openqa.selenium.json.JsonOutput;
-import org.openqa.selenium.net.PortProber;
+import org.openqa.selenium.remote.http.ClientConfig;
+import org.openqa.selenium.remote.http.Contents;
 import org.openqa.selenium.remote.http.HttpClient;
+import org.openqa.selenium.remote.http.HttpHandler;
 import org.openqa.selenium.remote.http.HttpRequest;
 import org.openqa.selenium.remote.http.HttpResponse;
-import org.seleniumhq.jetty9.server.Server;
-import org.seleniumhq.jetty9.servlet.ServletContextHandler;
-import org.seleniumhq.jetty9.servlet.ServletHolder;
 
-import java.io.IOException;
-import java.io.PrintWriter;
-import java.io.Writer;
 import java.net.URI;
 import java.net.URL;
+import java.time.Duration;
+import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
-import java.util.stream.Stream;
+import java.util.TreeMap;
+import java.util.stream.StreamSupport;
 
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import static java.util.Collections.singletonList;
+import static java.util.stream.Collectors.toList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.openqa.selenium.json.Json.MAP_TYPE;
+import static org.openqa.selenium.net.Urls.fromUri;
+import static org.openqa.selenium.remote.http.Contents.string;
+import static org.openqa.selenium.remote.http.HttpMethod.GET;
 
 abstract public class HttpClientTestBase {
 
   protected abstract HttpClient.Factory createFactory();
 
+  static HttpHandler delegate;
+  static AppServer server;
+
+  @BeforeClass
+  public static void setUp() {
+    server = new NettyAppServer(req -> delegate.execute(req));
+    server.start();
+  }
+
+  @AfterClass
+  public static void tearDown() {
+    server.stop();
+  }
+
   @Test
-  public void responseShouldCaptureASingleHeader() throws Exception {
+  public void responseShouldCaptureASingleHeader() {
     HashMultimap<String, String> headers = HashMultimap.create();
     headers.put("Cake", "Delicious");
 
@@ -72,14 +90,16 @@ abstract public class HttpClientTestBase {
    * this hard (notably when a legal value may contain a comma).
    */
   @Test
-  public void responseShouldKeepMultipleHeadersSeparate() throws Exception {
+  public void responseShouldKeepMultipleHeadersSeparate() {
     HashMultimap<String, String> headers = HashMultimap.create();
     headers.put("Cheese", "Cheddar");
     headers.put("Cheese", "Brie, Gouda");
 
     HttpResponse response = getResponseWithHeaders(headers);
 
-    ImmutableList<String> values = ImmutableList.copyOf(response.getHeaders("Cheese"));
+    List<String> values = StreamSupport
+      .stream(response.getHeaders("Cheese").spliterator(), false)
+      .collect(toList());
 
     assertThat(values).contains("Cheddar");
     assertThat(values).contains("Brie, Gouda");
@@ -97,154 +117,122 @@ abstract public class HttpClientTestBase {
   }
 
   @Test
-  public void shouldSendSimpleQueryParameters() throws Exception {
+  public void shouldSendSimpleQueryParameters() {
     HttpRequest request = new HttpRequest(GET, "/query");
     request.addQueryParameter("cheese", "cheddar");
 
     HttpResponse response = getQueryParameterResponse(request);
-    Map<String, Object> values = new Json().toType(response.getContentString(), MAP_TYPE);
+    Map<String, Object> values = new Json().toType(string(response), MAP_TYPE);
 
-    assertThat(values).containsEntry("cheese", ImmutableList.of("cheddar"));
+    assertThat(values).containsEntry("cheese", singletonList("cheddar"));
   }
 
   @Test
-  public void shouldEncodeParameterNamesAndValues() throws Exception {
+  public void shouldEncodeParameterNamesAndValues() {
     HttpRequest request = new HttpRequest(GET, "/query");
     request.addQueryParameter("cheese type", "tasty cheese");
 
     HttpResponse response = getQueryParameterResponse(request);
-    Map<String, Object> values = new Json().toType(response.getContentString(), MAP_TYPE);
+    Map<String, Object> values = new Json().toType(string(response), MAP_TYPE);
 
-    assertThat(values).containsEntry("cheese type", ImmutableList.of("tasty cheese"));
+    assertThat(values).containsEntry("cheese type", singletonList("tasty cheese"));
   }
 
   @Test
-  public void canAddMoreThanOneQueryParameter() throws Exception {
+  public void canAddMoreThanOneQueryParameter() {
     HttpRequest request = new HttpRequest(GET, "/query");
     request.addQueryParameter("cheese", "cheddar");
     request.addQueryParameter("cheese", "gouda");
     request.addQueryParameter("vegetable", "peas");
 
     HttpResponse response = getQueryParameterResponse(request);
-    Map<String, Object> values = new Json().toType(response.getContentString(), MAP_TYPE);
+    Map<String, Object> values = new Json().toType(string(response), MAP_TYPE);
 
-    assertThat(values).containsEntry("cheese", ImmutableList.of("cheddar", "gouda"));
-    assertThat(values).containsEntry("vegetable", ImmutableList.of("peas"));
+    assertThat(values).containsEntry("cheese", Arrays.asList("cheddar", "gouda"));
+    assertThat(values).containsEntry("vegetable", singletonList("peas"));
   }
 
   @Test
   public void shouldAllowUrlsWithSchemesToBeUsed() throws Exception {
-    Server server = new Server(PortProber.findFreePort());
-    ServletContextHandler handler = new ServletContextHandler();
-    handler.setContextPath("");
+    delegate = req -> new HttpResponse().setContent(Contents.utf8String("Hello, World!"));
 
-    class Canned extends HttpServlet {
-      @Override
-      protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws IOException {
-        try (PrintWriter writer = resp.getWriter()) {
-          writer.append("Hello, World!");
-        }
-      }
-    }
-    ServletHolder holder = new ServletHolder(new Canned());
-    handler.addServlet(holder, "/*");
-    server.setHandler(handler);
+    // This is a terrible choice of URL
+    try (HttpClient client = createFactory().createClient(new URL("http://example.com"))) {
 
-    server.start();
-    try {
-      // This is a terrible choice of URL
-      HttpClient client = createFactory().createClient(new URL("http://example.com"));
-
-      URI uri = server.getURI();
-      HttpRequest request = new HttpRequest(
-          GET,
-          String.format("http://%s:%s/hello", uri.getHost(), uri.getPort()));
+      URI uri = URI.create(server.whereIs("/"));
+      HttpRequest request =
+          new HttpRequest(GET, String.format("http://%s:%s/hello", uri.getHost(), uri.getPort()));
 
       HttpResponse response = client.execute(request);
 
-      assertThat(response.getContentString()).isEqualTo("Hello, World!");
-    } finally {
-      server.stop();
+      assertThat(string(response)).isEqualTo("Hello, World!");
     }
   }
 
   @Test
-  public void shouldIncludeAUserAgentHeader() throws Exception {
+  public void shouldIncludeAUserAgentHeader() {
     HttpResponse response = executeWithinServer(
-        new HttpRequest(GET, "/foo"),
-        new HttpServlet() {
-          @Override
-          protected void doGet(HttpServletRequest req, HttpServletResponse resp)
-              throws IOException {
-            try (Writer writer = resp.getWriter()) {
-              writer.write(req.getHeader("user-agent"));
-            }
-          }
-        });
-
+      new HttpRequest(GET, "/foo"),
+      req -> new HttpResponse().setContent(Contents.utf8String(req.getHeader("user-agent"))));
 
     String label = new BuildInfo().getReleaseLabel();
     Platform platform = Platform.getCurrent();
     Platform family = platform.family() == null ? platform : platform.family();
 
-    assertThat(response.getContentString()).isEqualTo(String.format(
-        "selenium/%s (java %s)",
-        label,
-        family.toString().toLowerCase()));
+    assertThat(string(response)).isEqualTo(String.format(
+      "selenium/%s (java %s)",
+      label,
+      family.toString().toLowerCase()));
   }
 
-  private HttpResponse getResponseWithHeaders(final Multimap<String, String> headers)
-      throws Exception {
-    return executeWithinServer(
+  @Test
+  public void shouldAllowConfigurationOfRequestTimeout() {
+    assertThatExceptionOfType(TimeoutException.class)
+      .isThrownBy(() -> executeWithinServer(
         new HttpRequest(GET, "/foo"),
-        new HttpServlet() {
-          @Override
-          protected void doGet(HttpServletRequest req, HttpServletResponse resp) {
-            headers.forEach(resp::addHeader);
-            resp.setContentLengthLong(0);
+        req -> {
+          try {
+            Thread.sleep(1000);
+          } catch (InterruptedException e) {
+            e.printStackTrace();
           }
-        });
+          return new HttpResponse().setContent(Contents.utf8String(req.getHeader("user-agent")));
+        },
+        ClientConfig.defaultConfig().readTimeout(Duration.ofMillis(500))));
   }
 
-  private HttpResponse getQueryParameterResponse(HttpRequest request) throws Exception {
+  private HttpResponse getResponseWithHeaders(final Multimap<String, String> headers) {
     return executeWithinServer(
-        request,
-        new HttpServlet() {
-          @Override
-          protected void doGet(HttpServletRequest req, HttpServletResponse resp)
-              throws IOException {
-            try (Writer writer = resp.getWriter()) {
-              JsonOutput json = new Json().newOutput(writer);
-              json.beginObject();
-              req.getParameterMap()
-                  .forEach((key, value) -> {
-                    json.name(key);
-                    json.beginArray();
-                    Stream.of(value).forEach(json::write);
-                    json.endArray();
-                  });
-              json.endObject();
-            }
-          }
-        });
+      new HttpRequest(GET, "/foo"),
+      req -> {
+        HttpResponse resp = new HttpResponse();
+        headers.forEach(resp::addHeader);
+        return resp;
+      });
   }
 
-  private HttpResponse executeWithinServer(HttpRequest request, HttpServlet servlet)
-      throws Exception {
-    Server server = new Server(PortProber.findFreePort());
-    ServletContextHandler handler = new ServletContextHandler();
-    handler.setContextPath("");
-    ServletHolder holder = new ServletHolder(servlet);
-    handler.addServlet(holder, "/*");
+  private HttpResponse getQueryParameterResponse(HttpRequest request) {
+    return executeWithinServer(
+      request,
+      req -> {
+        Map<String, Iterable<String>> params = new TreeMap<>();
+        req.getQueryParameterNames()
+          .forEach(name -> params.put(name, req.getQueryParameters(name)));
 
-    server.setHandler(handler);
+        return new HttpResponse().setContent(Contents.asJson(params));
+      });
+  }
 
-    server.start();
-    try {
-      HttpClient client = createFactory().createClient(server.getURI().toURL());
+  private HttpResponse executeWithinServer(HttpRequest request, HttpHandler handler) {
+    delegate = handler;
+    try (HttpClient client = createFactory().createClient(fromUri(URI.create(server.whereIs("/"))))) {
       return client.execute(request);
-    } finally {
-      server.stop();
     }
+  }
+
+  private HttpResponse executeWithinServer(HttpRequest request, HttpHandler handler, ClientConfig config) {
+    delegate = handler;
+    HttpClient client = createFactory().createClient(config.baseUri(URI.create(server.whereIs("/"))));
+    return client.execute(request);
   }
 }
